--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
         .button {
             transition: box-shadow .3s;
             width: auto;
-            height: 50px;
+            height: 130px;
             margin: auto;
             border-radius: 10px;
             border: 1px solid #000000;
@@ -86,6 +86,9 @@
             text-size-adjust: -4;
             font-size: xx-small;
             padding-bottom: 10px;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-top: 5px;
         }
         .box1:hover{
             animation: 0.6s;
@@ -95,6 +98,29 @@
         }
         .box1:hover{
            box-shadow: 5px 5px 50px #440381;
+        }
+        .button2 {
+            transition: box-shadow .3s;
+            width: auto;
+            height: 50px;
+            margin: auto;
+            border-radius: 10px;
+            border: 1px solid #000000;
+            background: #387D7A;
+            position: fixed;
+            align-items: center;
+            text-align: center;
+            overflow: hidden;
+            min-width: 200px;
+            max-width: 200px;
+            display: flex;
+            justify-content: center;
+            top: 90%;
+            left: 4.8%;
+            cursor: pointer;
+        }
+        .button2:hover{
+           box-shadow: 5px 5px 50px #387D7A;
         }
     </style>
 </head>
@@ -111,8 +137,11 @@
 </div>
 <div class="box1">
     <h2><u>About us</u></h2>
-    <p1>Test bank is a bank that is still in development for Harry to test his web development skills and more while doing this project i have learnt quite a fair bit about web developement already can you belive i have been at this for 1 week</p1>
+    <p1>Test bank is a bank that is still in development for sav to test his web development skills and more while doing this project i have learnt quite a fair bit about web developement already can you belive i have been at this for 1 week</p1>
 </div>
+<div class="button2">
+    <h1>Admin Only.</h1>
 
+</div>
 </body>
 </html>
