--- a/templates/login.html
+++ b/templates/login.html
@@ -2,9 +2,7 @@
 <html>
 <head>
     <title>Login</title>
-    
-</head>
-<style>
+    <style>
         body {
             background-color: #387D7A;
             background-repeat: repeat;
@@ -19,48 +17,47 @@
             display: flex;
         }
         .box1 {
-    height: 24%;
-    width: 400px;
-    margin: 0px;
-    padding: 30px;
-    position: fixed;
-    color: rgb(255, 255, 255);
-    border-radius: 25px;
-    text-align: center;
-    background-color: #000000;
-    background-repeat: no-repeat;
-    z-index: 0;
-    top: 25%;
-    left: 38%;
-}
+            height: 24%;
+            width: 400px;
+            margin: 0px;
+            padding: 30px;
+            position: fixed;
+            color: rgb(255, 255, 255);
+            border-radius: 25px;
+            text-align: center;
+            background-color: #000000;
+            background-repeat: no-repeat;
+            z-index: 0;
+            top: 25%;
+            left: 38%;
+        }
 
- .box1:hover{
-    box-shadow: 5px 5px 200px #440381;
- }
-
-
-</style>
+        .box1:hover {
+            box-shadow: 5px 5px 200px #440381;
+        }
+    </style>
+</head>
 <body>
-<div class="body">
-    <div class="box1">
-    <h1><b><u>Login</u></b></h1>
-    <form action="{{ url_for('login') }}" method="POST">
-        <label for="new_or_not">New User:</label>
-        <select id="new_or_not" name="new_or_not">
-            <option value="existing">Existing User</option>
-            <option value="new">New User</option>
-        </select><br>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br>
-        <label for="dob">Date of Birth (DD/MM/YYYY):</label>
-        <input type="text" id="dob" name="dob" required><br>
-        <label for="phone">Phone:</label>
-        <input type="text" id="phone" name="phone" required><br>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-        <input type="submit" value="Login">
-</div>
-    </form>
-
+    <div class="body">
+        <div class="box1">
+            <h1><b><u>Login</u></b></h1>
+            <form action="{{ url_for('login') }}" method="POST">
+                <label for="new_or_not">New User:</label>
+                <select id="new_or_not" name="new_or_not">
+                    <option value="new">New User</option>
+                    <option value="returning">Existing User</option>
+                </select><br>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+                <label for="dob">Date of Birth (DD/MM/YYYY):</label>
+                <input type="text" id="dob" name="dob" required><br>
+                <label for="phone">Phone:</label>
+                <input type="text" id="phone" name="phone" required><br>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required><br>
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
