--- a/templates/payment.html
+++ b/templates/payment.html
@@ -37,6 +37,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding-left: 2.3px;
 }
 .accept{
     height: 50px;
@@ -56,6 +57,7 @@ label {
     margin-bottom: 10px;
     color: white;
     font-size: 16px;
+    padding-right: 3px;
 }
 
 input[type="text"],
@@ -66,6 +68,7 @@ input[type="number"] {
     background-color: #f1f1f1;
     width: 100%;
     margin-bottom: 10px;
+    padding-right: 3px;
 }
 
 input[type="text"]:focus,
