--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,7 @@
             top: 0;
             z-index: 1;
             left: 0;
+            text-align: right;
         }
         
         .button {
@@ -122,6 +123,9 @@
         .button2:hover{
            box-shadow: 5px 5px 50px #387D7A;
         }
+        .sidebar:hover{
+            width: 200px;
+        }
     </style>
 </head>
 <body>
@@ -135,13 +139,12 @@
     </div>
 <div class="sidebar">
 </div>
-<div class="box1">
-    <h2><u>About us</u></h2>
-    <p1>Test bank is a bank that is still in development for sav to test his web development skills and more while doing this project i have learnt quite a fair bit about web developement already can you belive i have been at this for 1 week</p1>
-</div>
+
 <div class="button2">
     <h1>Admin Only.</h1>
-
+</div>
+<div class="sidebar">
+    <h1>test</h1>
 </div>
 </body>
 </html>
