--- a/templates/Fraudhelp.html
+++ b/templates/Fraudhelp.html
@@ -97,7 +97,7 @@
         <p>As part of our ongoing commitment to safeguarding your interests, we take any potential fraudulent activity very seriously. Our security team is actively reviewing the transaction to prevent any unauthorized financial loss and ensure the integrity of our services.</p>
         <p><b>What you should do:</b></p>
         <p><b>Do Not Retry:</b> Please refrain from attempting the transaction again until we have completed the investigation and contacted you with further instructions.</p>
-        <p><b>Contact Customer Support:</b> If you believe this hold on the transaction is in error or if you have any concerns, please contact our customer support immediately at [Customer Support Phone Number] or [Customer Support Email]. Our team is available [Support Hours] to assist you.</p>
+        <p><b>Contact Customer Support:</b> If you believe this hold on the transaction is in error or if you have any concerns, please contact our customer support immediately at 1234567890 or Testbankinghelp@testbanking.com. Our team is available 24/7 to assist you.</p>
         <p><b>Review Account Activity:</b> As an additional precaution, we recommend reviewing your recent account activity and transaction history for any other suspicious transactions. If you find any unfamiliar activities, please report them promptly to our customer support team.</p>
         <p>Protecting your privacy and financial security is paramount to us, and we sincerely apologize for any inconvenience this may cause. Rest assured, we are working diligently to resolve this matter and will keep you informed of any updates.</p>
         <p>Thank you for your understanding and cooperation.</p>
