--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
             display: flex;
         }
         .box1 {
-            height: 24%;
+            height: 500px;
             width: 400px;
             margin: 0px;
             padding: 30px;
@@ -28,13 +28,41 @@
             background-color: #000000;
             background-repeat: no-repeat;
             z-index: 0;
-            top: 25%;
+            top: 10%;
             left: 38%;
         }
 
         .box1:hover {
             box-shadow: 5px 5px 200px #440381;
         }
+        .name{
+            border-radius: 10px;
+            background-color: aqua;
+        }
+input[type="text"],
+input[type="password"],
+select {
+    background-color: #EDEDED;
+    border: 1px solid #000000;
+    color: #333333;
+    width: 300px;
+    border-radius: 13px;
+    margin-bottom: 10px; /* Add margin bottom to create spacing between elements */
+    padding: 5px; /* Add padding to create space within the elements */
+}
+
+    /* Customize submit button color */
+    button[type="submit"] {
+        background-color: #4CAF50;
+        border: none;
+        color: #FFFFFF;
+        padding: 10px 20px;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+    button[type="submit"]:hover{
+        box-shadow: 5px 5px 100px green;
+    }
     </style>
 </head>
 <body>
@@ -42,19 +70,14 @@
         <div class="box1">
             <h1><b><u>Login</u></b></h1>
             <form action="{{ url_for('login') }}" method="POST">
-                <label for="new_or_not">New User:</label>
                 <select id="new_or_not" name="new_or_not">
                     <option value="new">New User</option>
                     <option value="returning">Existing User</option>
                 </select><br>
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required><br>
-                <label for="dob">Date of Birth (DD/MM/YYYY):</label>
-                <input type="text" id="dob" name="dob" required><br>
-                <label for="phone">Phone:</label>
-                <input type="text" id="phone" name="phone" required><br>
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required><br>
+                <input type="text" id="name" name="name" required placeholder="Name"><br>
+                <input type="text" id="dob" name="dob" required placeholder="Date of birth DD/MM/YYYY"><br>
+                <input type="text" id="phone" name="phone" required placeholder="Phonenumber"><br>
+                <input type="password" id="password" name="password" required placeholder="Password"><br>
                 <button type="submit">Login</button>
             </form>
         </div>
