--- a/templates/done.html
+++ b/templates/done.html
@@ -6,13 +6,13 @@
     <title>Payment Verified.</title>
 <style>
     body{
-        background-color: #387D7A;
+        background-color: black;
     }
     .comp {
     background-color: rgb(255, 255, 255);
     border-radius: 25px;
     border: 30px;
-    border-color: rgb(0, 255, 34);
+    border-color: gray;
     height: 700px;
     width: 800px;
     color: rgb(0, 0, 0);
@@ -29,7 +29,7 @@
 <body>
     <div class="comp">
     <h1>Payment Verified</h1>
-     <img src="/img/gif1.gif" alt="Animated GIF">
+     <img src="gif1.gif" alt="Animated GIF">
     </div>
     <script>
         setTimeout(function() {
