--- a/templates/login.html
+++ b/templates/login.html
@@ -31,6 +31,22 @@
             top: 10%;
             left: 38%;
         }
+        .boxL {
+            height: 100px;
+            width: 100px;
+            margin: 0px;
+            padding: 30px;
+            position: fixed;
+            color: rgb(255, 255, 255);
+            border-radius: 25px;
+            text-align: center;
+            background-color: transparent;
+            background-repeat: no-repeat;
+            z-index: 0;
+            top: -50px;
+            left: -50px;
+            display: fixed;
+        }
 
         .box1:hover {
             box-shadow: 5px 5px 200px #440381;
@@ -81,6 +97,9 @@ select {
                 <button type="submit">Login</button>
             </form>
         </div>
+    </div>
+    <div class="boxL">
+        <img src="B (1).png" alt="" style="height: 200px; width: 200px;">
     </div>
 </body>
 </html>
