--- a/templates/balance.html
+++ b/templates/balance.html
@@ -6,9 +6,24 @@
     <title>Account balance</title>
 </head>
 <style>
-    
+    body{
+        background-color: black;
+        margin: 0;
+        padding: 0;
+    }
+    .container{
+        width: 800px;
+        height: 800px;
+        background-color: white;
+        border-radius: 10px;
+        border-color: gray;
+        border-style: solid;
+        top: 900px;
+    }
 </style>
 <body>
-    
+    <div class="container">
+
+    </div>
 </body>
 </html>
